--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@
 numpy>=1.23.4
 seaborn>=0.12.2
 torch>=1.13.1
-torchvision>=0.14.1
+torchvision
 tqdm>=4.63.0
 
 # Logging -------------------------------------
