Fix torch install bug on github action

--- a/.github/workflows/python-test-publish-testpypi.yml
+++ b/.github/workflows/python-test-publish-testpypi.yml
@@ -31,7 +31,7 @@ jobs:
         python -m pip install --upgrade pip
         pip install build
         pip install setuptools wheel twine
-        pip install torch torchvision torchaudio --extra-index-url https://download.pytorch.org/whl/cpu
+        pip install torch torchvision --extra-index-url https://download.pytorch.org/whl/cpu
         pip install -r requirements.txt
         python setup.py install
     
