--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 # Usage: pip install -r requirements.txt
 
 # Base ----------------------------------------
+setuptools
 numpy>=1.23.4
 seaborn>=0.12.2
 torch>=1.13.1
