--- a/.github/workflows/python-test-publish-testpypi.yml
+++ b/.github/workflows/python-test-publish-testpypi.yml
@@ -33,7 +33,7 @@ jobs:
         pip install setuptools wheel twine
         pip install torch torchvision --extra-index-url https://download.pytorch.org/whl/cpu
         pip install -r requirements.txt
-        python setup.py install
+        pip install --editable .
     
     - name: Build package
       run: python -m build
