--- a/.github/workflows/python-test-publish-testpypi.yml
+++ b/.github/workflows/python-test-publish-testpypi.yml
@@ -30,9 +30,11 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install build
-        pip install setuptools wheel twine
+        pip install --upgrade setuptools
+        pip install  wheel twine
         pip install torch torchvision --extra-index-url https://download.pytorch.org/whl/cpu
         pip install -r requirements.txt
+        pip install ez_setup
         pip install --editable .
     
     - name: Build package
